fix overflow issue in pin create attachment view modal

--- a/app/assets/stylesheets/api/pins.scss
+++ b/app/assets/stylesheets/api/pins.scss
@@ -152,6 +152,7 @@
   img {
     width: 90px;
     object-fit: contain;
+    overflow-y: scroll;
   }
 }
 
